--- a/adminsortable/templates/adminsortable/edit_inline/tabular.html
+++ b/adminsortable/templates/adminsortable/edit_inline/tabular.html
@@ -28,10 +28,10 @@
         <td class="original">
             {% with initial_forms=inline_admin_form.formset.management_form.initial.INITIAL_FORMS %}
             {% if forloop.counter <= initial_forms %}
-            <i class="fa fa-{% if forloop.first %}sort-desc{% elif forloop.counter == initial_forms %}sort-asc{% else %}sort{% endif %}"></i>
+              <i class="fa fa-{% if forloop.first %}sort-desc{% elif forloop.counter == initial_forms %}sort-asc{% else %}sort{% endif %}"></i>
             {% endif %}
             {% endwith %}
-          {% if inline_admin_form.original or inline_admin_form.show_url %}<p>
+          {% if inline_admin_form.original or inline_admin_form.show_url %}<p class="fa">
           {% if inline_admin_form.original %}
               {{ inline_admin_form.original }}
               {% if inline_admin_form.model_admin.show_change_link and inline_admin_form.model_admin.has_registered_model %}<a href="{% url inline_admin_form.model_admin.opts|admin_urlname:'change' inline_admin_form.original.pk|admin_urlquote %}" class="inlinechangelink">{% trans "Change" %}</a>{% endif %}
